--- a/turtle/index.html
+++ b/turtle/index.html
@@ -11,9 +11,10 @@
       -khtml-user-select: none;
       -webkit-user-select: none;
       -o-user-select: none;
+      overflow: hidden;
     }
     body {
-      width: 100vw; height: 100vh; background-color: #f0f4f8; overflow: hidden;
+      width: 100dvw; height: 100dvh; background-color: #f0f4f8; overflow: hidden;
       margin: 0; padding: 0; cursor: crosshair; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
@@ -244,6 +245,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.15); max-width: 280px;
       backdrop-filter: blur(5px); border: 1px solid rgba(255,255,255,0.8);
       cursor: grab; max-height: 90vh; overflow-y: auto;
+      width: 80vw;
     }
     #settings-panel.dragging { cursor: grabbing; opacity: 0.9; }
     #settings-panel h2 { margin: 0 0 10px 0; font-size: 16px; border-bottom: 1px solid #ddd; padding-bottom: 5px; }
@@ -364,25 +366,57 @@
     }
 
     /* Mobile UI adjustments */
-    @media (max-width: 768px) {
-      #settings-panel {
-        max-width: 90%;
-        left: 5% !important;
-        right: 5% !important;
-        top: 10px !important;
-      }
+  @media (max-width: 768px) {
+  #settings-panel {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
-      #stats-panel {
-        bottom: 70px;
-      }
+    /* Override desktop positioning */
+    top: auto !important;
 
-      button.btn {
-        font-size: 14px;
-      }
-    }
+    /* Override desktop sizing */
+    width: auto !important;
+    max-width: none !important;
+    max-height: calc(100dvh - 20px) !important
+    height: auto !important;
+
+    border-radius: 16px 16px 0 0;
+
+    /* Hide except for handle */
+    transform: translateY(calc(100% - 40px));
+    transition: transform 0.3s ease;
+
+    padding-left: calc(env(safe-area-inset-left) + 10px);
+    padding-right: calc(env(safe-area-inset-right) + 10px);
+
+    will-change: transform;
+  }
+
+  #settings-panel.open {
+    transform: translateY(0);
+  }
+#settings-handle-wrapper { width: 100%; padding: 0 0 16px 0; /* big tap zone */ cursor: pointer; }
+  #settings-handle {
+    width: 50px;
+    height: 6px;
+    background: #ccc;
+    border-radius: 3px;
+    margin: 6px auto;
+  }
+}
+
+#world {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
   </style>
 </head>
-<body>
+<body id="world">
 
 <div id="grid"></div>
 <canvas id="debug-canvas"></canvas>
@@ -395,6 +429,7 @@
 </div>
 
 <div id="settings-panel">
+  <div id="settings-handle-wrapper"> <div id="settings-handle"></div> </div>
   <h2>Turtle Lab</h2>
 
   <div class="row">
@@ -501,7 +536,7 @@
     <ul>
       <li><strong>Double-tap on empty space</strong> - Add food</li>
       <li><strong>Tap and hold on empty space</strong> - Add obstacles (rocks)</li>
-      <li><strong>Double-tap on turtle's head</strong> - Make it retract its head</li>
+      <li><strong>tap on turtle's head</strong> - Make it retract its head</li>
       <li><strong>Tap on turtle's name</strong> - Rename the turtle</li>
       <li><strong>Drag turtle's shell</strong> - Move the turtle around</li>
     </ul>
@@ -554,7 +589,11 @@
   </div>
 </div>
 
-<script>
+<script>try{
+document.getElementById("settings-handle-wrapper").addEventListener("click", () => {
+  document.getElementById("settings-panel").classList.toggle("open");
+});
+
   // -------------------------
   // Configuration
   // -------------------------
@@ -816,6 +855,106 @@
     return {x:gx, y:gy};
   }
 
+  // Improved A* algorithm with better obstacle handling
+  function findPath(sx, sy, ex, ey) {
+    const start = worldToGrid(sx, sy);
+    const end = worldToGrid(ex, ey);
+
+    // Validate positions
+    if (start.x < 0 || start.x >= gridCols || start.y < 0 || start.y >= gridRows) return null;
+    if (end.x < 0 || end.x >= gridCols || end.y < 0 || end.y >= gridRows) return null;
+    if (grid[end.x][end.y] === 1) return null; // Can't pathfind to a wall
+
+    const openSet = [];
+    const closedSet = new Set();
+    const gScore = Array(gridCols).fill().map(() => Array(gridRows).fill(Infinity));
+    const fScore = Array(gridCols).fill().map(() => Array(gridRows).fill(Infinity));
+    const cameFrom = Array(gridCols).fill().map(() => Array(gridRows).fill(null));
+
+    openSet.push(start);
+    gScore[start.x][start.y] = 0;
+    fScore[start.x][start.y] = heuristic(start.x, start.y, end.x, end.y);
+
+    while (openSet.length > 0) {
+        // Find node with lowest fScore
+        let current = openSet.reduce((a, b) =>
+            fScore[a.x][a.y] < fScore[b.x][b.y] ? a : b);
+
+        // Check if we've reached the goal
+        if (current.x === end.x && current.y === end.y) {
+            return reconstructPath(cameFrom, current);
+        }
+
+        openSet.splice(openSet.indexOf(current), 1);
+        closedSet.add(`${current.x},${current.y}`);
+
+        // Generate neighbors (8-directional)
+        for (let dx = -1; dx <= 1; dx++) {
+            for (let dy = -1; dy <= 1; dy++) {
+                if (dx === 0 && dy === 0) continue; // Skip current node
+
+                const nx = current.x + dx;
+                const ny = current.y + dy;
+
+                // Check bounds
+                if (nx < 0 || nx >= gridCols || ny < 0 || ny >= gridRows) continue;
+
+                // Check if blocked (walls only)
+                if (grid[nx][ny] === 1 || grid[nx][ny] === 2) continue;
+
+                // Check for diagonal movement through corners
+                if (dx !== 0 && dy !== 0) {
+                    if (grid[current.x + dx][current.y] === 1 ||
+                        grid[current.x][current.y + dy] === 1) {
+                        continue;
+                    }
+                }
+
+                const neighbor = {x: nx, y: ny};
+
+                // Skip if already evaluated
+                if (closedSet.has(`${nx},${ny}`)) continue;
+
+                // Calculate tentative gScore
+                const tentativeG = gScore[current.x][current.y] +
+                                  (dx !== 0 && dy !== 0 ? 1.414 : 1); // Diagonal cost
+
+                // Check if this path is better
+                if (!openSet.some(n => n.x === nx && n.y === ny)) {
+                    openSet.push(neighbor);
+                } else if (tentativeG >= gScore[nx][ny]) {
+                    continue; // Not a better path
+                }
+
+                // This path is the best so far
+                cameFrom[nx][ny] = current;
+                gScore[nx][ny] = tentativeG;
+                fScore[nx][ny] = tentativeG + heuristic(nx, ny, end.x, end.y);
+            }
+        }
+    }
+
+    return null; // No path found
+  }
+
+  // Helper function for A*
+  function heuristic(x1, y1, x2, y2) {
+    // Octile distance for 8-directional movement
+    const dx = Math.abs(x1 - x2);
+    const dy = Math.abs(y1 - y2);
+    return (dx + dy) + (1.414 - 2) * Math.min(dx, dy);
+  }
+
+  // Reconstruct path from cameFrom
+  function reconstructPath(cameFrom, current) {
+    const path = [];
+    while (current) {
+        path.push(gridToWorld(current.x, current.y));
+        current = cameFrom[current.x][current.y];
+    }
+    return path.reverse();
+  }
+
   function generateMaze() {
     const wallType = parseInt(ui.brush.value) || 1;
 
@@ -944,7 +1083,6 @@
     });
 
     saveData();
-    saveData();
     showNotification("Terrain generated!");
   }
 
@@ -1066,78 +1204,6 @@
             }
         }
     }
-  }
-
-  // --- A* Algorithm ---
-  function findPath(sx, sy, ex, ey) {
-    const start = worldToGrid(sx, sy);
-    const end = worldToGrid(ex, ey);
-
-    if (start.x < 0 || start.x >= gridCols || start.y < 0 || start.y >= gridRows) return null;
-    if (end.x < 0 || end.x >= gridCols || end.y < 0 || end.y >= gridRows) return null;
-    if (grid[end.x][end.y] === 1) return null; // Only walls block pathfinding
-
-    const openSet = [];
-    const closedSet = new Set();
-    const gScore = {};
-    const fScore = {};
-    const cameFrom = {};
-    const getKey = (n) => `${n.x},${n.y}`;
-
-    openSet.push(start);
-    gScore[getKey(start)] = 0;
-    fScore[getKey(start)] = dist(start.x, start.y, end.x, end.y);
-
-    while(openSet.length > 0) {
-      let current = openSet.reduce((a, b) => (fScore[getKey(a)]||Infinity) < (fScore[getKey(b)]||Infinity) ? a : b);
-
-      if(current.x === end.x && current.y === end.y) {
-        const path = [];
-        let temp = current;
-        while(cameFrom[getKey(temp)]) {
-          path.push(gridToWorld(temp.x, temp.y));
-          temp = cameFrom[getKey(temp)];
-        }
-        return path.reverse();
-      }
-
-      openSet.splice(openSet.indexOf(current), 1);
-      closedSet.add(getKey(current));
-
-      for(let dx = -1; dx <= 1; dx++) {
-        for(let dy = -1; dy <= 1; dy++) {
-          if(dx === 0 && dy === 0) continue;
-
-          const nx = current.x + dx;
-          const ny = current.y + dy;
-
-          if(nx >= 0 && nx < gridCols && ny >= 0 && ny < gridRows) {
-            if(grid[nx][ny] === 1) continue;
-            // Corner Cutting Check
-            if(dx !== 0 && dy !== 0) {
-              if(grid[current.x + dx][current.y] === 1 || grid[current.x][current.y + dy] === 1) continue;
-            }
-
-            const neighbor = {x: nx, y: ny};
-            if(closedSet.has(getKey(neighbor))) continue;
-
-            const moveCost = (dx!==0 && dy!==0) ? 1.414 : 1;
-            const tentativeG = (gScore[getKey(current)]||0) + moveCost;
-
-            if(!openSet.some(n => n.x === neighbor.x && n.y === neighbor.y)) {
-              openSet.push(neighbor);
-            } else if (tentativeG >= (gScore[getKey(neighbor)]||Infinity)) {
-              continue;
-            }
-
-            cameFrom[getKey(neighbor)] = current;
-            gScore[getKey(neighbor)] = tentativeG;
-            fScore[getKey(neighbor)] = tentativeG + dist(nx, ny, end.x, end.y);
-          }
-        }
-      }
-    }
-    return null;
   }
 
   // -------------------------
@@ -1511,6 +1577,15 @@
         this.dragOffset.x = e.clientX - this.x;
         this.dragOffset.y = e.clientY - this.y;
       });
+      this.shell.addEventListener('touchstart', e => {
+        e.stopPropagation();
+        this.isDragging = true;
+        this.el.classList.add('is-dragging');
+        this.targetFood = null;
+        this.path = [];
+        this.dragOffset.x = e.clientX - this.x;
+        this.dragOffset.y = e.clientY - this.y;
+      });
     }
 
     destroy() {
@@ -1752,17 +1827,23 @@
 
     raycastBlocked(tx, ty) {
       const d = dist(this.x, this.y, tx, ty);
-      const steps = Math.floor(d / (GRID_SIZE/2));
-      for(let i=1; i<steps; i++) {
-        const r = i/steps;
-        const cx = this.x + (tx-this.x)*r;
-        const cy = this.y + (ty-this.y)*r;
+      const steps = Math.max(5, Math.floor(d / (GRID_SIZE/2)));
+
+      for(let i = 1; i < steps; i++) {
+        const r = i / steps;
+        const cx = this.x + (tx - this.x) * r;
+        const cy = this.y + (ty - this.y) * r;
+
+        // Check if this point is in a wall
         const g = worldToGrid(cx, cy);
-        if(g.x>=0 && g.x<gridCols && g.y>=0 && g.y<gridRows && grid[g.x][g.y] === 1) return true;
+        if (g.x >= 0 && g.x < gridCols && g.y >= 0 && g.y < gridRows) {
+            if (grid[g.x][g.y] === 1) {
+                return true;
+            }
+        }
       }
       return false;
     }
-
     physicalRaycast(tx, ty) {
       const d = dist(this.x, this.y, tx, ty);
       const steps = Math.floor(d / (GRID_SIZE/2));
@@ -1775,7 +1856,7 @@
       }
       return false;
     }
-
+    
     // New smoothed rotation function using Lerp
     // factor: 0.0 to 1.0 (smaller = smoother/slower)
     smoothRotate(target, factor = 0.1, useLerp = false) {
@@ -2005,6 +2086,15 @@
           ctx.lineTo(t.path[i].x, t.path[i].y);
         }
         ctx.stroke();
+
+        // Highlight current target node
+        if(t.pathIndex < t.path.length) {
+          const target = t.path[t.pathIndex];
+          ctx.fillStyle = 'rgba(255, 0, 0, 0.7)';
+          ctx.beginPath();
+          ctx.arc(target.x, target.y, 8, 0, Math.PI * 2);
+          ctx.fill();
+        }
       }
 
       // Target Line
@@ -2090,12 +2180,12 @@
     if (target === document.body || target === gridRoot) {
       if (now - lastTapTime < 300 && lastTapTarget === target) {
         // Double tap - add food
-        if (!isBlocked(e.clientX, e.clientY)) {
-          new Food(e.clientX, e.clientY);
+        if (!isBlocked(e.touches[0].clientX, e.touches[0].clientY)) {
+          new Food(e.touches[0].clientX, e.touches[0].clientY);
         }
         lastTapTime = 0;
         lastTapTarget = null;
-        e.preventDefault();
+
       } else {
         // First tap
         lastTapTime = now;
@@ -2105,21 +2195,15 @@
 
     // Check if it's a double tap on turtle head
     if (target.classList.contains('turtle__head')) {
-      if (now - lastTapTime < 300 && lastTapTarget === target) {
-        // Double tap - retract head
-        const turtleEl = target.closest('.turtle');
-        if (turtleEl) {
-          turtleEl.classList.add('is-retracted');
-          setTimeout(() => turtleEl.classList.remove('is-retracted'), 2000);
-        }
-        lastTapTime = 0;
-        lastTapTarget = null;
-        e.preventDefault();
-      } else {
-        // First tap
-        lastTapTime = now;
-        lastTapTarget = target;
+      // Double tap - retract head
+      const turtleEl = target.closest('.turtle');
+      if (turtleEl) {
+        turtleEl.classList.add('is-retracted');
+        setTimeout(() => turtleEl.classList.remove('is-retracted'), 2000);
       }
+      lastTapTime = 0;
+      lastTapTarget = null;
+      e.preventDefault();
     }
   }
 
@@ -2127,8 +2211,8 @@
   function handleLongPress(e) {
     if (isMobile && (e.target === document.body || e.target === gridRoot)) {
       // Long press - add obstacle
-      if (!isBlocked(e.clientX, e.clientY)) {
-        new Obstacle(e.clientX, e.clientY);
+      if (!isBlocked(e.touches[0].clientX, e.touches[0].clientY)) {
+        new Obstacle(e.touches[0].clientX, e.touches[0].clientY);
       }
       e.preventDefault();
     }
@@ -2177,7 +2261,54 @@
     }
   });
 
+  window.addEventListener('touchmove', e => {
+    // Grid Paint
+    if(isPainting && ui.edit.checked) {
+      const cell = document.elementFromPoint(e.targetTouches[0].clientX, e.targetTouches[0].clientY);
+      if(cell && cell.classList.contains('grid-cell')) {
+        toggleCell(parseInt(cell.dataset.x), parseInt(cell.dataset.y), paintValue);
+      }
+    }
+
+    // Turtle Drag
+    turtles.forEach(t => {
+      if(t.isDragging) {
+        t.x = e.targetTouches[0].clientX - t.dragOffset.x;
+        t.y = e.targetTouches[0].clientY - t.dragOffset.y;
+      }
+    });
+    // Panel Drag
+    if(draggingPanel) {
+      ui.panel.style.left = (e.targetTouches[0].clientX - panelOffset.x) + 'px';
+      ui.panel.style.top = (e.targetTouches[0].clientY - panelOffset.y) + 'px';
+    }
+  });
+
   window.addEventListener('mouseup', () => {
+    isPainting = false;
+    draggingPanel = false;
+    ui.panel.classList.remove('dragging');
+    let dragged = false;
+    turtles.forEach(t => {
+      if(t.isDragging) {
+        t.isDragging = false;
+        t.el.classList.remove('is-dragging');
+        dragged = true;
+
+        // Safety: If dropped in a wall, push to nearest free space
+        if(isBlocked(t.x, t.y)) {
+           const g = worldToGrid(t.x, t.y);
+           const safe = findNearestFree(g.x, g.y);
+           const safeWorld = gridToWorld(safe.x, safe.y);
+           t.x = safeWorld.x;
+           t.y = safeWorld.y;
+        }
+      }
+    });
+    if(dragged) saveData();
+  });
+
+  window.addEventListener('touchend', () => {
     isPainting = false;
     draggingPanel = false;
     ui.panel.classList.remove('dragging');
@@ -2433,7 +2564,7 @@
   loadData();
   startAutoSpawn();
   loop();
-  stats.startTime = Date.now();
+  stats.startTime = Date.now();}catch(e){echo(e)}
 </script>
 </body>
 </html>
